# grpc-v-dbus

./: .gitignore  README.md  payload.txt
rust-dbus/: Cargo.toml  dbus-1.14.4.tar.xz
rust-dbus/dbus-1.14.4/: Doxyfile  Makefile  Makefile.in  aminclude_static.am  config.h  config.status  configure  dbus-1-uninstalled.pc  dbus-1.pc  libtool
rust-dbus/dbus-1.14.4/bus/: Makefile  Makefile.in  activation.lo  apparmor.lo  audit.lo  bus.lo
rust-dbus/dbus-1.14.4/cmake/: DBus1ConfigVersion.cmake
rust-dbus/dbus-1.14.4/dbus/: Makefile  Makefile.in  Version  dbus-arch-deps.h  dbus-asv-util.lo  dbus-mainloop.lo  dbus-message-util.lo  dbus-pollable-set-epoll.lo  dbus-pollable-set-poll.lo  dbus-pollable-set.lo  dbus-shell.lo  dbus-spawn-unix.lo  dbus-string-util.lo  dbus-sysdeps-util-unix.lo  dbus-sysdeps-util.lo  dbus-userdb-util.lo  libdbus-1.la  libdbus-internal.la  libdbus_1_la-dbus-address.lo  libdbus_1_la-dbus-auth.lo  libdbus_1_la-dbus-bus.lo  libdbus_1_la-dbus-connection.lo  libdbus_1_la-dbus-credentials.lo  libdbus_1_la-dbus-dataslot.lo  libdbus_1_la-dbus-errors.lo  libdbus_1_la-dbus-file-unix.lo  libdbus_1_la-dbus-file.lo  libdbus_1_la-dbus-hash.lo  libdbus_1_la-dbus-internals.lo  libdbus_1_la-dbus-keyring.lo  libdbus_1_la-dbus-list.lo  libdbus_1_la-dbus-marshal-basic.lo  libdbus_1_la-dbus-marshal-byteswap.lo  libdbus_1_la-dbus-marshal-header.lo  libdbus_1_la-dbus-marshal-recursive.lo  libdbus_1_la-dbus-marshal-validate.lo  libdbus_1_la-dbus-memory.lo  libdbus_1_la-dbus-mempool.lo  libdbus_1_la-dbus-message.lo  libdbus_1_la-dbus-misc.lo  (+26 more)
rust-dbus/src/: client.rs  server.rs
rust-grpc/: Cargo.toml
rust-grpc/src/: client.rs  server.rs
rust-uds/: Cargo.toml
rust-uds/src/: client.rs  server.rs
(+116 files in other folders)
