[package]
name = "rust-uds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.0"
prost = "0.11.0"
tokio = { version = "1.20.1", features = ["macros"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tower = "0.4"

[build-dependencies]
tonic-build = "0.8.0"


[[bin]] # Bin to run the HelloWorld gRPC server
name = "uds-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "uds-client"
path = "src/client.rs"
